<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Week9_inClass</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="newsletter">Send News Letter</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

</resources>
